--- a/callcenter/test-output/old/Default suite/classes.html
+++ b/callcenter/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.almundo.callcenter.CallcenterMainProcessTest</td>
+<td>com.almundo.callcenter.ConcurrentlyCase3Tests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>dispararLLamadas</td>
+<td>concurrentTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
