--- a/callcenter/test-output/old/Default suite/methods.html
+++ b/callcenter/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee9faa">  <td>18/04/22 18:26:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CallcenterMainProcessTest.dispararLLamadas()[pri:0, instance:com.almundo.callcenter.CallcenterMainProcessTest@f6c48ac]">dispararLLamadas</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/04/23 05:58:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConcurrentlyCase3Tests.concurrentTest()[pri:0, instance:com.almundo.callcenter.ConcurrentlyCase3Tests@3abbfa04]">concurrentTest</td> 
+  <td>main@553871028</td>   <td></td> </tr>
 </table>
