10 hilos al tiempo

--- a/callcenter/test-output/old/Default suite/classes.html
+++ b/callcenter/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.almundo.callcenter.semaphore.CallCenterRunTest</td>
+<td>com.almundo.callcenter.ConcurrentlyCase4Tests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>callSemaphore</td>
+<td>concurrentTest_10_threads_at_time</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>concurrentTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
