--- a/callcenter/test-output/emailable-report.html
+++ b/callcenter/test-output/emailable-report.html
@@ -31,14 +31,16 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">2,0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">4,1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.almundo.callcenter.semaphore.CallCenterRunTest</td><td><a href="#m1"><b>callSemaphore</b>  </a></td><td class="numi">1</td><td>1524545802875</td><td class="numi">2028</td></tr>
+<tr class="passedodd"><td rowspan="2">com.almundo.callcenter.ConcurrentlyCase4Tests</td><td><a href="#m1"><b>concurrentTest</b>  </a></td><td class="numi">1</td><td>1524576479688</td><td class="numi">2085</td></tr><tr class="passedodd"><td><a href="#m2"><b>concurrentTest_10_threads_at_time</b>  </a></td><td class="numi">1</td><td>1524576481777</td><td class="numi">2007</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.almundo.callcenter.semaphore.CallCenterRunTest:callSemaphore</h2>
+<h2 id="m1">com.almundo.callcenter.ConcurrentlyCase4Tests:concurrentTest_10_threads_at_time</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">com.almundo.callcenter.ConcurrentlyCase4Tests:concurrentTest</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
