--- a/callcenter/test-output/index.html
+++ b/callcenter/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\jorgeluis\AppData\Local\Temp\testng-eclipse-1481210796\testng-customsuite.xml</span>
+                    <span>C:\Users\jorgeluis\AppData\Local\Temp\testng-eclipse--1781368979\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.almundo.callcenter.semaphore.CallCenterRunTest" hash-for-method="callSemaphore">callSemaphore</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.almundo.callcenter.ConcurrentlyCase4Tests" hash-for-method="concurrentTest">concurrentTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.almundo.callcenter.ConcurrentlyCase4Tests" hash-for-method="concurrentTest_10_threads_at_time">concurrentTest_10_threads_at_time</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +124,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.almundo.callcenter.semaphore.CallCenterRunTest</span>
+              <span class="class-name">com.almundo.callcenter.ConcurrentlyCase4Tests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="callSemaphore">
-                  </a> <!-- callSemaphore -->
-                  <span class="method-name">callSemaphore</span>
+                  <a name="concurrentTest">
+                  </a> <!-- concurrentTest -->
+                  <span class="method-name">concurrentTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="concurrentTest_10_threads_at_time">
+                  </a> <!-- concurrentTest_10_threads_at_time -->
+                  <span class="method-name">concurrentTest_10_threads_at_time</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\jorgeluis\AppData\Local\Temp\testng-eclipse-1481210796\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\jorgeluis\AppData\Local\Temp\testng-eclipse--1781368979\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +155,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.almundo.callcenter.semaphore.CallCenterRunTest&quot;/&gt;
+      &lt;class name=&quot;com.almundo.callcenter.ConcurrentlyCase4Tests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -183,16 +195,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'callSemaphore')
-data.setCell(0, 2, 'com.almundo.callcenter.semaphore.CallCenterRunTest')
-data.setCell(0, 3, 2028);
+data.setCell(0, 1, 'concurrentTest')
+data.setCell(0, 2, 'com.almundo.callcenter.ConcurrentlyCase4Tests')
+data.setCell(0, 3, 2085);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'concurrentTest_10_threads_at_time')
+data.setCell(1, 2, 'com.almundo.callcenter.ConcurrentlyCase4Tests')
+data.setCell(1, 3, 2007);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,10 +234,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.almundo.callcenter.semaphore.CallCenterRunTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.almundo.callcenter.ConcurrentlyCase4Tests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">callSemaphore</span>
+                <span class="method-name">concurrentTest</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">concurrentTest_10_threads_at_time</span>
+                <span class="method-start">2089 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
