--- a/callcenter/test-output/old/Default suite/methods-alphabetical.html
+++ b/callcenter/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee9faa">  <td>18/04/23 23:56:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CallCenterRunTest.callSemaphore()[pri:0, instance:com.almundo.callcenter.semaphore.CallCenterRunTest@9660f4e]">callSemaphore</td> 
-  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/04/24 08:27:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConcurrentlyCase4Tests.concurrentTest()[pri:0, instance:com.almundo.callcenter.ConcurrentlyCase4Tests@5a8806ef]">concurrentTest</td> 
+  <td>main@103887628</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/04/24 08:28:01</td>   <td>2089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConcurrentlyCase4Tests.concurrentTest_10_threads_at_time()[pri:0, instance:com.almundo.callcenter.ConcurrentlyCase4Tests@5a8806ef]">concurrentTest_10_threads_at_time</td> 
+  <td>main@103887628</td>   <td></td> </tr>
 </table>
